--- a/story.html
+++ b/story.html
@@ -18,19 +18,30 @@
       position: relative;
     }
 
+    .story-wrapper {
+      width: 90%;
+      max-width: 540px;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      background-color: #1c1c1c;
+    }
+
     .story-slide {
+      width: 100%;
+      height: 100%;
       position: absolute;
       top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 320px;
-      height: 100vh;
-      background-color: #1c1c1c;
+      left: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      padding: 2rem;
+      box-sizing: border-box;
       opacity: 0;
       transition: opacity 0.3s ease-in-out;
     }
@@ -44,28 +55,27 @@
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      border: 2px solid #f44;
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 20px;
+      left: 20px;
+      border: 2px solid #f44;
     }
 
     .username {
       position: absolute;
-      top: 15px;
-      left: 80px;
-      font-weight: bold;
+      top: 25px;
+      left: 90px;
       font-size: 1rem;
+      font-weight: bold;
       color: #ccc;
     }
 
     .message {
       font-size: 1.2rem;
       font-weight: bold;
-      text-align: center;
       color: #f0f0f0;
-      padding: 1rem;
       text-shadow: 0 0 6px #000;
+      max-width: 80%;
     }
 
     .back-button {
@@ -81,11 +91,11 @@
       z-index: 999;
     }
 
-    .arrow-button {
-      position: fixed;
+    .next-button, .prev-button {
+      position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      font-size: 2rem;
+      font-size: 1.5rem;
       color: #ccc;
       background-color: #1a1a1a;
       border: 1px solid #444;
@@ -100,11 +110,11 @@
     }
 
     .next-button {
-      right: calc(50% - 170px);
+      right: -60px;
     }
 
     .prev-button {
-      left: calc(50% - 170px);
+      left: -60px;
     }
 
     .live-counter {
@@ -119,19 +129,38 @@
       right: 10px;
     }
 
-    #story-counter { bottom: 50px; }
-    #scroll-counter { bottom: 80px; }
+    #waste-counter { bottom: 50px; }
+    #like-counter { bottom: 80px; }
+    #scroll-counter { bottom: 110px; }
+    #reel-counter { bottom: 140px; }
+    #story-counter { bottom: 170px; }
+    #comment-counter { bottom: 200px; }
+    #repost-counter { bottom: 230px; }
+    #bookmark-counter { bottom: 260px; }
+    #profile-counter { bottom: 290px; }
+    #post-counter { bottom: 320px; }
   </style>
 </head>
 <body>
-  <a class="back-button" href="index.html">← Back</a>
-  <div class="arrow-button prev-button" onclick="prevStory()">‹</div>
-  <div class="arrow-button next-button" onclick="nextStory()">›</div>
+  <a class="back-button" href="index.html">← Back to Feed</a>
 
-  <div id="storyWrapper"></div>
+  <div class="story-wrapper">
+    <div class="prev-button" onclick="prevStory()">‹</div>
+    <div class="next-button" onclick="nextStory()">›</div>
+    <div id="storyWrapper"></div>
+  </div>
 
-  <div id="story-counter" class="live-counter"></div>
+  <!-- Live stat trackers -->
+  <div id="waste-counter" class="live-counter"></div>
+  <div id="like-counter" class="live-counter"></div>
   <div id="scroll-counter" class="live-counter"></div>
+  <div id="reel-counter" class="live-counter"></div>
+  <div id="story-counter" class="live-counter"></div>
+  <div id="comment-counter" class="live-counter"></div>
+  <div id="repost-counter" class="live-counter"></div>
+  <div id="bookmark-counter" class="live-counter"></div>
+  <div id="profile-counter" class="live-counter"></div>
+  <div id="post-counter" class="live-counter"></div>
 
   <script>
     const usernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
@@ -144,65 +173,93 @@
       "Fake story. Real regret."
     ];
 
-    let storiesViewed = parseInt(localStorage.getItem("storiesViewed")) || 0;
-    let scrollCount = parseInt(localStorage.getItem("scrollCount")) || 0;
-
     const storyWrapper = document.getElementById("storyWrapper");
-    const storyCounter = document.getElementById("story-counter");
-    const scrollCounter = document.getElementById("scroll-counter");
-
     let currentIndex = 0;
-    const slides = [];
 
-    function updateCounters() {
-      storyCounter.textContent = `Stories viewed: ${storiesViewed}`;
-      scrollCounter.textContent = `Scrolls done: ${scrollCount}`;
+    const stats = {
+      secondsWasted: "secondsWasted",
+      likesGiven: "likesGiven",
+      scrollCount: "scrollCount",
+      reelsViewed: "reelsViewed",
+      storiesViewed: "storiesViewed",
+      commentsGiven: "commentsGiven",
+      repostsDone: "repostsDone",
+      postsBookmarked: "postsBookmarked",
+      profilesVisited: "profilesVisited",
+      postsPosted: "postsPosted"
+    };
+
+    function getStat(key) {
+      return parseInt(localStorage.getItem(key)) || 0;
     }
 
-    function createSlides() {
-      usernames.forEach((username, i) => {
-        const message = messages[i % messages.length];
-        const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+    function setStat(key, value) {
+      localStorage.setItem(key, value);
+    }
 
-        const slide = document.createElement("div");
-        slide.className = "story-slide";
-        if (i === 0) slide.classList.add("active");
+    function incrementStat(key) {
+      let val = getStat(key) + 1;
+      setStat(key, val);
+      updateStats();
+    }
 
-        slide.innerHTML = `
-          <img class="avatar" src="${avatar}" alt="avatar">
-          <div class="username">@${username}</div>
-          <div class="message">${message}</div>
-        `;
+    function updateStats() {
+      document.getElementById("waste-counter").textContent = `Minutes wasted: ${Math.floor(getStat(stats.secondsWasted) / 60)}`;
+      document.getElementById("like-counter").textContent = `Likes given: ${getStat(stats.likesGiven)}`;
+      document.getElementById("scroll-counter").textContent = `Scrolls done: ${getStat(stats.scrollCount)}`;
+      document.getElementById("reel-counter").textContent = `Reels viewed: ${getStat(stats.reelsViewed)}`;
+      document.getElementById("story-counter").textContent = `Stories viewed: ${getStat(stats.storiesViewed)}`;
+      document.getElementById("comment-counter").textContent = `Comments given: ${getStat(stats.commentsGiven)}`;
+      document.getElementById("repost-counter").textContent = `Reposts done: ${getStat(stats.repostsDone)}`;
+      document.getElementById("bookmark-counter").textContent = `Bookmarks: ${getStat(stats.postsBookmarked)}`;
+      document.getElementById("profile-counter").textContent = `Profiles visited: ${getStat(stats.profilesVisited)}`;
+      document.getElementById("post-counter").textContent = `Posts posted: ${getStat(stats.postsPosted)}`;
+    }
 
-        storyWrapper.appendChild(slide);
-        slides.push(slide);
-      });
+    function startWastedTimer() {
+      setInterval(() => {
+        incrementStat(stats.secondsWasted);
+      }, 1000);
+    }
+
+    function showStory(index) {
+      const slides = document.querySelectorAll(".story-slide");
+      slides.forEach(slide => slide.classList.remove("active"));
+      slides[index].classList.add("active");
+      incrementStat(stats.storiesViewed);
     }
 
     function nextStory() {
-      slides[currentIndex].classList.remove("active");
-      currentIndex = (currentIndex + 1) % slides.length;
-      slides[currentIndex].classList.add("active");
-
-      storiesViewed++;
-      scrollCount++;
-      localStorage.setItem("storiesViewed", storiesViewed);
-      localStorage.setItem("scrollCount", scrollCount);
-      updateCounters();
+      currentIndex = (currentIndex + 1) % usernames.length;
+      showStory(currentIndex);
     }
 
     function prevStory() {
-      slides[currentIndex].classList.remove("active");
-      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-      slides[currentIndex].classList.add("active");
-
-      scrollCount++;
-      localStorage.setItem("scrollCount", scrollCount);
-      updateCounters();
+      currentIndex = (currentIndex - 1 + usernames.length) % usernames.length;
+      showStory(currentIndex);
     }
 
-    createSlides();
-    updateCounters();
+    // Build slides
+    usernames.forEach((username, i) => {
+      const message = messages[i % messages.length];
+      const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+
+      const slide = document.createElement("div");
+      slide.className = "story-slide";
+      if (i === 0) slide.classList.add("active");
+
+      slide.innerHTML = `
+        <img class="avatar" src="${avatar}" alt="avatar">
+        <div class="username">@${username}</div>
+        <div class="message">${message}</div>
+      `;
+
+      storyWrapper.appendChild(slide);
+    });
+
+    updateStats();
+    startWastedTimer();
+    incrementStat(stats.storiesViewed);
   </script>
 </body>
 </html>
