--- a/user.html
+++ b/user.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fake Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fake User Profile</title>
   <style>
     body {
       background-color: #0f0f0f;
@@ -64,7 +64,7 @@
 
     .stat-grid {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 1px;
       background-color: #333;
     }
@@ -102,28 +102,19 @@
 </head>
 <body>
   <header>
-    <div class="username" id="usernameDisplay">@fakeuser</div>
+    <div class="username" id="username">@user</div>
   </header>
 
   <div class="profile">
     <img id="avatar" src="" alt="avatar">
     <div class="stats">
-      <div class="stat">
-        <strong id="postCount">??</strong>
-        posts
-      </div>
-      <div class="stat">
-        <strong>??</strong>
-        followers
-      </div>
-      <div class="stat">
-        <strong>??</strong>
-        following
-      </div>
+      <div class="stat"><strong id="postCount">10</strong> posts</div>
+      <div class="stat"><strong>0</strong> followers</div>
+      <div class="stat"><strong>0</strong> following</div>
     </div>
   </div>
 
-  <div class="bio" id="bioText">Just vibing in the void.</div>
+  <div class="bio">Too cool to achieve anything. Just stats.</div>
 
   <div class="stat-grid" id="statGrid"></div>
 
@@ -136,31 +127,33 @@
   </div>
 
   <script>
-    const statGrid = document.getElementById("statGrid");
-    const username = new URLSearchParams(window.location.search).get("user") || "ghostfeed";
-    const stats = [
-      { key: "minutesWasted", label: "Minutes Wasted", get: () => Math.floor(Math.random() * 1000) },
-      { key: "likesGiven", label: "Likes Given", get: () => Math.floor(Math.random() * 500) + " 🤍" },
-      { key: "scrollsDone", label: "Scrolls Done", get: () => Math.floor(Math.random() * 1000) + " flicks" },
-      { key: "reelsViewed", label: "Reels Viewed", get: () => Math.floor(Math.random() * 300) + " reels" },
-      { key: "storiesViewed", label: "Stories Viewed", get: () => Math.floor(Math.random() * 100) + " weird tales" },
-      { key: "commentsGiven", label: "Comments Given", get: () => Math.floor(Math.random() * 200) + " yaps" },
-      { key: "repostsDone", label: "Reposts Done", get: () => Math.floor(Math.random() * 100) + " echoes" },
-      { key: "postsBookmarked", label: "Bookmarks", get: () => Math.floor(Math.random() * 50) + " saved for nothing" },
-      { key: "profilesVisited", label: "Profiles Visited", get: () => Math.floor(Math.random() * 300) + " ghosts" },
-      { key: "postsPosted", label: "Posts Posted", get: () => Math.floor(Math.random() * 100) + " fakes" }
-    ];
+    const params = new URLSearchParams(window.location.search);
+    const user = params.get("user") || "unknown_user";
+    document.getElementById("username").textContent = `@${user}`;
+    document.getElementById("avatar").src = `https://api.dicebear.com/7.x/personas/svg?seed=${user}`;
 
-    document.getElementById("usernameDisplay").textContent = `@${username}`;
-    document.getElementById("avatar").src = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+    const statGrid = document.getElementById("statGrid");
+    const stats = [
+      { label: "Minutes Wasted", max: 999 },
+      { label: "Likes Given", max: 500 },
+      { label: "Scrolls Done", max: 800 },
+      { label: "Reels Viewed", max: 700 },
+      { label: "Stories Viewed", max: 600 },
+      { label: "Comments Given", max: 400 },
+      { label: "Reposts Done", max: 300 },
+      { label: "Bookmarks", max: 200 },
+      { label: "Profiles Visited", max: 100 },
+      { label: "Posts Posted", max: 100 },
+    ];
 
     stats.forEach(stat => {
       const div = document.createElement("div");
-      div.innerHTML = `<strong>${stat.get()}</strong>${stat.label}`;
+      const value = Math.floor(Math.random() * stat.max);
+      div.innerHTML = `<strong>${value}</strong>${stat.label}`;
       statGrid.appendChild(div);
     });
 
-    document.getElementById("postCount").textContent = Math.floor(Math.random() * 100);
+    document.getElementById("postCount").textContent = Math.floor(Math.random() * 30) + 1;
   </script>
 </body>
 </html>
